feat: Make the API more generic.
In the future, we'd like to accomodate airline-related resources
alongside hotels.
